# rocFFT

./: CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md  install.sh
.jenkins/: Common.groovy  Debug.groovy  HipClang.groovy  NPI.groovy  PreCheckin.groovy  common.groovy  debug.groovy  precheckin.groovy  staticanalysis.groovy  staticlibrary.groovy
clients/: CMakeLists.txt  client_utils.h
clients/cmake/: build-options.cmake
clients/rider/: CMakeLists.txt  dyna-rider.cpp  misc.h  rider.cpp  rider.h
clients/samples/fixed-16/: CMakeLists.txt  fixed-16-double.cpp  fixed-16-float-hipfft.cpp  fixed-16-float.cpp
clients/samples/fixed-large/: CMakeLists.txt  fixed-large-double.cpp  fixed-large-float.cpp
clients/samples/hipfft/: CMakeLists.txt  hipfft_1d_d2z.cpp  hipfft_1d_z2z.cpp  hipfft_2d_d2z.cpp  hipfft_2d_z2z.cpp  hipfft_3d_d2z.cpp  hipfft_3d_z2z.cpp  hipfft_planmany_2d_r2c.cpp  hipfft_planmany_2d_z2z.cpp  hipfft_setworkarea.cpp
clients/samples/rocfft/: CMakeLists.txt  examplekernels.h  exampleutils.h  rocfft_example_complexcomplex.cpp  rocfft_example_realcomplex.cpp  rocfft_example_set_stream.cpp
clients/selftest/: CMakeLists.txt  test_complex.cpp
clients/tests/: CMakeLists.txt  accuracy_test.cpp  accuracy_test.h  accuracy_test_1D.cpp  accuracy_test_2D.cpp  accuracy_test_3D.cpp  accuracy_test_common.h  buffer.h  buffer_memory.h  fftw_transform.h  gtest_main.cpp  hipfft_test.cpp  multithread_test.cpp  rocfft_against_fftw.h  rocfft_transform.h  template.cpp  test_constants.h  test_params.h  testing_transpose.hpp  transpose_gtest.cpp  unit_test.cpp
docker/: dockerfile-build-centos  dockerfile-build-sles  dockerfile-build-ubuntu-rock  dockerfile-install-ubuntu  dockerfile-rocfft-ubuntu-16.04
docs/: Doxyfile  run_doc.sh  run_doxygen.sh
docs/samples/: CMakeLists.txt  README.md  complex_1d.cpp  complex_2d.cpp  complex_3d.cpp  complex_forward_1d.cpp  real2complex_1d.cpp  real2complex_2d.cpp  real2complex_3d.cpp
docs/source/: allapi.rst  api.rst  conf.py  library.rst  real.rst
scripts/perf/: alltime.py  commandrunner.py  datagraphs.asy  fftPerformanceTesting.py  getspecs.py  html_report.py  measurePerformance.py  perf_unit_test.sh  plotPerformance.py  rocfft_perf_test_suite.py  roofline.asy  test_alltime.sh  testperf.sh  timing.py
utils/: hip_real_fft_test.cpp
utils/simple_bench/: CMakeLists.txt  kernel_launch.h  main.cpp  twiddles.h
